EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/19/2010==
Trevius: Stopped NPCs from sending an appearance packet for each WP they arrive at or depart from.

==06/18/2010==
Trevius: Nimbus particle effects now show correctly from spells/clickies.
Trevius: Removed the ability to stack the same Nimbus particle effect repeatedly.
Trevius: Existing Nimbus particle effects are now sent to players as they zone in.
Trevius: EVENT_SPAWN should work better for more quest commands now.  Please report any bugs/issues with this change.
Trevius: SoF/SoD/Live - Stand state appearances are now set in the spawn struct.

REQUIRED SQL:
utils/sql/svn/1548_nimbuseffect_required.sql

==06/16/2010==
gaeorn: fixed possible bug with unlocking cursed containers in LDoN
Trevius: SoF/SoD/Live - Corrected the item structures to allow summonedflag setting to show on items.
Trevius: SoD/Live - Identified Clairvoyance and added it to load from the DB to be shown on items.
Trevius: SoD - Possible fix for empty corpse looting bugging clients.
gaeorn: fixed another issue with the integer transformation for the RNG where it was not converting from a double float properly

==06/15/2010==
Secrets: Characters with HPs higher than 30k will no longer be set back to 30k current health when zoning.
gaeorn: fixed integer transformation for RNG as it previously would only return the high value of the low to high range if the RNG returned exactly 0xffffffff
Trevius: The following item fields now load from the database: EliteMaterial LDoNSellBackRate ScriptFileID ExpendableArrow QuestItemFlag.
Trevius: Identified some unknown fields in the database from 13th floor findings, and removed multiple unused fields.
Trevius: The summonedflag field is copied from UNK109 field.

REQUIRED SQL:
utils/sql/svn/1542_items_table_cleanup.sql

==06/10/2010==