@@ -1981,13 +1981,22 @@ void Client::Handle_OP_ItemVerifyRequest(const EQApplicationPacket *app)
 
 	if ((slot_id < 30) || (slot_id == 9999) || (slot_id > 250 && slot_id < 331 && item->ItemType == ItemTypePotion))	// sanity check
 	{
-		if((spell_id == 0 || spell_id == 4294967295) && (item->ItemType != ItemTypeFood && item->ItemType != ItemTypeDrink && item->ItemType != ItemTypeAlcohol))
+		if((spell_id == 0 || spell_id == 4294967295) && (item->ItemType != ItemTypeFood && item->ItemType != ItemTypeDrink && item->ItemType != ItemTypeAlcohol && item->ItemType != ItemTypeSpell))
 		{
 			LogFile->write(EQEMuLog::Debug, "Item with no effect right clicked by %s",GetName());
 		}
 		else if (inst->IsType(ItemClassCommon))
 		{
-			if ((item->Click.Type == ET_ClickEffect) || (item->Click.Type == ET_Expendable) || (item->Click.Type == ET_EquipClick) || (item->Click.Type == ET_ClickEffect2))
+			if(item->ItemType == ItemTypeSpell && strstr((const char*)item->Name, "Tome of "))
+			{
+				DeleteItemInInventory(slot_id, 1, true);
+				TrainDiscipline(item->ID);
+			}
+			else if(item->ItemType == ItemTypeSpell)
+			{
+				return;
+			}
+			else if ((item->Click.Type == ET_ClickEffect) || (item->Click.Type == ET_Expendable) || (item->Click.Type == ET_EquipClick) || (item->Click.Type == ET_ClickEffect2))
 			{
 				if (inst->GetCharges() == 0)
 				{
