@@ -306,6 +306,7 @@ void command_raidloot(Client* c, const Seperator *sep);
 void command_globalview(Client* c, const Seperator *sep);
 void command_distance(Client *c, const Seperator *sep);
 void command_cvs(Client *c, const Seperator *sep);
+void command_max_all_skills(Client *c, const Seperator *sep);
 
 #ifdef EMBPERL
 void command_embperl_plugin(Client *c, const Seperator *sep);
